2002-08-21  Jody Goldberg <jody@gnome.org>

	* ms-obj.c (ms_obj_new) : add a convenience routine to be safe.
	(ms_read_OBJ) : Use it here.

2002-08-19  Jon K Hellan  <hellan@acm.org>

	* ms-biff.c (ms_biff_query_peek_next, ms_biff_put_var_seekto,
	ms_biff_put_var_commit, ms_biff_put_len_commit): Use glib's seek
	enum instead of the enum which used to be in libgsf.

	* ms-excel-write.c (biff_boundsheet_write_last, write_index): Ditto.

2002-08-18  Jody Goldberg <jody@gnome.org>

	* ms-excel-util.c (excel_iconv_open_for_import) : fix unicode codepage
	  to be actual unicode with the high bit lopped off, which I hope is
	  synonymous with 8859-1.  This still needs to be translated into
	  utf8.

2002-08-17  Jon K Hellan  <hellan@acm.org>

	* ms-chart.c (BC_R): Fix typos.

2002-08-17  Jody Goldberg <jody@gnome.org>

	* ms-excel-util.c (get_locale_charset_name) : delete.
	(excel_iconv_open_for_import) : realize that 1200 and 1201 are both
	  unicode and that we only want to convert to utf8.
	(excel_wcstombs) : die die die.  We may need this again one day when
	  exporting utf8 back to xl 95.  But we'll cross that bridge when we
	  come to it.

	* ms-excel-read.c (get_chars) : internally text should always be utf8.
	(ms_excel_read_workbook) : fix the warning.
	  I've found some references for the code pages.

2002-08-16  Jon K Hellan  <hellan@acm.org>

	* ms-excel-read.c (ms_excel_read_SUPBOOK): Shut up warning.

2002-08-15  Jon K Hellan  <hellan@acm.org>

	* ms-excel-write.c (biff_boundsheet_write_last, write_index):
	Change type of oldpos variable to gsf_off_t.

2002-08-13  Jody Goldberg <jody@gnome.org>

	* ms-obj.c (ms_obj_read_pre_biff8_obj) : support colours for polygons.

	* ms-excel-read.c (ms_sheet_create_obj) : Add support for polygon
	  colours.
	(ms_sheet_obj_anchor_to_pos) : hmm, our supposition that >= 97 ==
	  1/256 and < 97 == 1024 seems wrong in the face of chap03-1.

2002-08-12  Jody Goldberg <jody@gnome.org>

	* Release 1.1.7
